Fixed the unwanted white space in IE below the toplogo banner

--- a/styles_s2.css
+++ b/styles_s2.css
@@ -23,3 +23,7 @@
 .minHeight {
     width:1067px;
 }
+
+.topLogo img {
+    display:block; 
+}
